src/objects/Constituency__c.object
<CustomObject>
    <description>EBoard constituencies (aka Logical Seats)</description>
    <fields>
        <fullName>ConstituencyName__c</fullName>
        <description>Name without the number of physical seats in it</description>
        <label>ConstituencyName</label>
        <length>150</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Constituency_Name__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Constituency Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Constituency_Type__c</fullName>
        <label>Constituency Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Constituency</fullName>
                    <default>true</default>
                    <label>Constituency</label>
                </value>
                <value>
                    <fullName>District</fullName>
                </value>
                <value>
                    <fullName>Division</fullName>
                </value>
                <value>
                    <fullName>Union-Wide</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Constituency_Year__c</fullName>
        <label>Constituency Year</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2014</fullName>
                    <default>true</default>
                    <label>2014</label>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Constituency__c</fullName>
        <formula>ConstituencyName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Constituency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Executive_Committee_Seat__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Executive Committee Seat</label>
        <referenceTo>EBoardSeats__c</referenceTo>
        <relationshipLabel>Constituencies</relationshipLabel>
        <relationshipName>Constituencies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Executive_Committee__c</fullName>
        <formula>Executive_Committee_Seat__r.SeatHolder__r.FirstName &amp; &quot; &quot; &amp; Executive_Committee_Seat__r.SeatHolder__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Executive Committee</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Not_Eligible_For_Election__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Not Eligible For Election</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Seat_Count__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Seat Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Qualified_Candidates__c</fullName>
        <label>Total Qualified Candidates</label>
        <summaryFilterItems>
            <field>Eboard_Candidate__c.Nomination_Status__c</field>
            <operation>equals</operation>
            <value>Qualified</value>
        </summaryFilterItems>
        <summaryForeignKey>Eboard_Candidate__c.Constituency_Name1__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <description>Zip Code for mapping purposes.</description>
        <label>Zip Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>Constituency</label>
    <listViews>
        <fullName>X2017_Constituencies</fullName>
        <columns>NAME</columns>
        <columns>ConstituencyName__c</columns>
        <columns>Constituency_Type__c</columns>
        <columns>Constituency_Year__c</columns>
        <columns>Seat_Count__c</columns>
        <columns>Not_Eligible_For_Election__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Constituency_Year__c</field>
            <operation>equals</operation>
            <value>2017</value>
        </filters>
        <label>2017 Constituencies</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>SeatID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Constituencies</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>